2003-05-14  Steve Youngs  <youngs@xemacs.org>

	* package-get.el (package-get-require-signed-base-updates): Turn
	the PGP verification code back on.

2003-05-11  Simon Josefsson  <jas@extundo.com>

	* replace.el (delete-non-matching-lines, kill-non-matching-lines)
	(copy-non-matching-lines, delete-matching-lines)
	(kill-matching-lines, copy-matching-lines): Don't message.

2003-05-10  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.13 "cauliflower" is released.

2003-05-08  Jerry James  <james@xemacs.org>

	* code-init.el (coding-system-variable-default-value-table): Use
	undecided-unix for keyboards to avoid EOL autodetection on TTYs.
	* code-init.el (coding-system-variable-default-value): Update the
	comment to reflect the changed table.

2003-05-03  Steve Youngs  <youngs@xemacs.org>

	* package-admin.el (package-admin-find-top-directory): You can't
	concat a string & a char, so convert 'directory-sep-char' to a string.

2003-05-02  Stephen J. Turnbull  <stephen@xemacs.org>

	* cmdloop.el (command-error): Ensure exit msg is on separate line.

2003-05-01  Steve Youngs  <youngs@xemacs.org>

	* package-get.el (package-get-require-signed-base-updates): Force
	default to nil while I sort out some PGP problems.

2003-04-16  Jerry James  <james@xemacs.org>

	* keydefs.el: Remove mappings for keys mapped to the nowhere
	defined function function-key-error.

2003-04-24  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.12 "carrot" is released.

2003-04-24  Steve Youngs  <youngs@xemacs.org>

	* font-lock.el (font-lock-match-java-declarations): Move
	save-restriction, narrow-to-region to beginning of function to
	avoid going beyond the limit and causing an infloop.
	From Jin Choi <jsc@orangeimagineering.com>.

2003-04-24  Vasily Korytov  <deskpot@myrealbox.com>

	* lisp-mode.el (emacs-lisp-mode-hook, lisp-mode-hook,
	lisp-interaction-mode-hook): Add the docstrings.

2003-04-23  Stephen J. Turnbull  <stephen@xemacs.org>
