@@ -1,3 +1,11 @@
+2003-05-15  Steve Youngs  <youngs@xemacs.org>
+
+	* package-get.el (package-get-package-index-file-location): New,
+	so it is possible to specify a location for the index file.
+	(package-get-locate-index-file): Use it.
+	(package-get-maybe-save-index): Ditto.
+	(package-get-user-index-filename): Remove.
+
 2003-05-14  Steve Youngs  <youngs@xemacs.org>
 
 	* package-get.el (package-get-require-signed-base-updates): Turn
